objects/Shipment_Container_Internal__c.object
<CustomObject>
    <fields>
        <fullName>Cust_Handling_Unit_ID__c</fullName>
        <label>Cust Handling Unit ID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIM_UOM__c</fullName>
        <label>DIM UOM</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_Handling_Unit_ID__c</fullName>
        <label>Ext Handling Unit ID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Volume__c</fullName>
        <label>Gross Volume</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Weight__c</fullName>
        <label>Gross Weight</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handling_Unit_ID__c</fullName>
        <label>Shipping unit #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Date__c</fullName>
        <label>Last Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_User__c</fullName>
        <label>Last User</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Volume__c</fullName>
        <label>Net Volume</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Weight__c</fullName>
        <label>Net Weight</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARTDESC__c</fullName>
        <formula>Shipment_Id__r.PARTDESC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PARTDESC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Item_Type__c</fullName>
        <label>Pack Item Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Handling_Unit_ID__c</fullName>
        <description>should be lookup</description>
        <label>Parent Handling Unit ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty_UOM__c</fullName>
        <label>Qty UOM</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipUnit_Qty__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipment_Container_Id__c</fullName>
        <externalId>true</externalId>
        <label>Shipment Container Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Id__c</fullName>
        <label>Shipment #</label>
        <referenceTo>Shipment_Internal__c</referenceTo>
        <relationshipLabel>Shipment Container (Internal)</relationshipLabel>
        <relationshipName>Shipment_Container_Internal</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shpg_CAT__c</fullName>
        <label>Shpg CAT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shpg_Matl_Desc__c</fullName>
        <label>Shpg Matl Desc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shpg_Matl__c</fullName>
        <label>Shpg Matl</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tare_Weight__c</fullName>
        <label>Tare Weight</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech__c</fullName>
        <formula>Shipment_Id__r.Tech__c</formula>
        <label>Tech</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_UOM__c</fullName>
        <label>Volume UOM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight_UOM__c</fullName>
        <label>Weight UOM</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Shipment Container (Internal)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Handling_Unit_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>Shipment Container Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Containers (Internal)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>